@@ -31,9 +31,9 @@ RUN unzip phax.war -d /phax
 
 # Part 2:
     
-FROM tomcat:10-jdk21
+FROM tomcat:10.1-jre25
 
-ENV CATALINA_OPTS="-Djava.security.egd=file:/dev/urandom"
+ENV CATALINA_OPTS="--enable-native-access=ALL-UNNAMED -Djava.security.egd=file:/dev/urandom"
 
 WORKDIR $CATALINA_HOME/webapps
 RUN rm -rf manager host-manager docs examples ROOT
